--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -6,3 +6,13 @@
   text-align: center;
   margin: 0px;
 }
+
+@media (max-width: 767px) {
+  .CommentPost .item-ejin-like-counter-post {
+    position: relative;
+    width: auto;
+    text-align: left;
+    left: auto;
+    top: auto;
+  }
+}
