Mobile Optimization Update

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -9,10 +9,10 @@
 
 @media (max-width: 767px) {
   .CommentPost .item-ejin-like-counter-post {
-    position: relative;
-    width: auto;
-    text-align: left;
-    left: auto;
-    top: auto;
+    position: relative !important;
+    width: auto !important;
+    text-align: left !important;
+    left: auto !important;
+    top: auto !important;
   }
 }
